# rl-games-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
AiContext/: 2025-07-15.md  2025-07-16.md  2025-08-11.md  CLAUDE_Notes.md  CURRICULUM_IMPLEMENTATION_SUMMARY.md
AiContext/2025-08-13/: ensure_goal_in_L_centers.md  plan_cache_counting.md  plan_cache_fix.md
AiContext/2025-08-19/: CHANGES.md  PLAN_CACHE_R1L1_FIX.md
AiContext/2025-08-20/: CHANGES.md  astar_curriculum_cache_revalidation.md  rr_rng_determinism_fix.md
AiContext/20250715/: Prompt1.txt  Prompt1Response.txt  Prompt2.txt  Prompt2Respose.txt
AiContext/20250717/: CLAUDE_CurrentPlan.md  CLAUDE_CurrentPlanProgress.md
AiContext/20250808/: CHANGE_NOTES.md  REVIEW_NOTES.md
AiContext/20250811/: PER_LEVEL_MAX_STEPS.md  RR_structured_walls.md
AiContext/20250813/: CHANGES.md  notes.md
configs/ricochet_robots/: dqn_curriculum.yaml  dqn_small.yaml  ppo_astar_curruculum.yaml  ppo_astar_curruculum2.yaml  ppo_cnn_curriculum.yaml  ppo_curriculum.yaml
notebooks/: view_board_states.py  visualise_astar_plan_curriculum.py  visualise_curriculum_and_env.py
rl_board_games/agents/: __init__.py
rl_board_games/core/: __init__.py  agent.py  curriculum.py  difficulty_generator.py  encoder.py  game.py  persistence.py  plan_cache.py  solver.py
rl_board_games/curricula/: __init__.py  astar_plan_curriculum.py  ricochet.py  ricochet_robots_curriculum.py
scripts/: demo.py  dqn_curriculum_mwe.py  generate_difficulty_lookup.py  generate_plan_cache.py  train.py  train_curriculum.py
tests/agents/: test_sb3_agents.py
(+25 files in other folders)
